--- a/finalproject.html
+++ b/finalproject.html
@@ -121,12 +121,13 @@
                     </figcaption>
                 </figure>
                 <p>
-                    Như vậy, Messi đã thêm vào bộ sưu tập của mình thêm 1 danh hiệu danh giá, trong đó có thể kể đến như:
-                    <ul>
-                        <li>1 World Cup</li>
-                        <li>4 Champions League</li>
-                        <li>3 Fifa Club World Cup</li>
-                    </ul> 
+                    Như vậy, Messi đã thêm vào bộ sưu tập của mình thêm 1 danh hiệu danh giá, trong đó có thể kể đến
+                    như:
+                <ul>
+                    <li>1 World Cup</li>
+                    <li>4 Champions League</li>
+                    <li>3 Fifa Club World Cup</li>
+                </ul>
                 </p>
             </article>
         </section>
