--- a/finalproject.html
+++ b/finalproject.html
@@ -16,8 +16,9 @@
         </ul>
     </nav>
     <main>
+        <h1>TIN HOT TRONG NGÀY</h1>
         <section>
-            <h1>Argentina vô địch World Cup 2022 </h1>
+            <h2>Argentina vô địch World Cup 2022 </h2>
             <article>
                 <h3>
                     Trong trận đấu Lionel Messi lập cú đúp, Kylian Mbappe ghi hattrick, Argentina hòa Pháp 3-3 sau hai
