--- a/finalproject.html
+++ b/finalproject.html
@@ -139,7 +139,7 @@
 
         Thông tin liên hệ:<br>
         <ul>
-            <li>Facebook: <a href="https://www.facebook.com/profile.php?id=61568566781620" target="_blank">Here</a></li>
+            <li>Facebook: <a href="https://www.facebook.com/profile.php?id=61568566781620" target="_blank">Facebook</a></li>
             <li>Gmail: bachinh@gmail.com </li>
             <li>Telephone: +84336337460</li>
         </ul>
