--- a/finalproject.html
+++ b/finalproject.html
@@ -10,9 +10,9 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#HOME">HOME</a></li>
-            <li><a href="#TINHOTTRONGNGAY">TIN HOT TRONG NGÀY</a></li>
-            <li><a href="#TINCHUYENNHUONG">TIN CHUYỂN NHƯỢNG</a></li>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">TIN HOT TRONG NGÀY</a></li>
+            <li><a href="#">TIN CHUYỂN NHƯỢNG</a></li>
         </ul>
     </nav>
     <main>
